CLI args & Start with Scanner & Error handling
* Handle command line arguments providing interactive sessions + reading
  file content.
* Setup Error handling with multiple scenarios in mind.
* API for Scanner without real implementation.

--- a/tree-walk-rs/Cargo.toml
+++ b/tree-walk-rs/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2024"
 description = "Implementation of a tree walk interpreter for LOX language ported from Java section in crafting interpreters book"
 
 [dependencies]
+anyhow = "1"
+thiserror = "2"
+
+[[bin]]
+name = "rlox"
+path = "src/main.rs"
