Basic Disassembler for debug purposes

--- a/clox/CMakeLists.txt
+++ b/clox/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(clox
   src/main.c
   src/chunk.c
   src/memory.c
+  src/debug.c
 )
 
 target_include_directories(clox PUBLIC include)
