--- a/clox/CMakeLists.txt
+++ b/clox/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(clox
   src/chunk.c
   src/memory.c
   src/debug.c
+  src/value.c
 )
 
 target_include_directories(clox PUBLIC include)
